added alt to pics.

--- a/static.html
+++ b/static.html
@@ -59,6 +59,7 @@
       <div class="col-lg-6 col-lg-offset-3 centered">
         <h3>Static Site Generator</h3>
         <hr>
+        <img src="assets/img/portfolio/static.jpg" alt="static">
         <p>Simple static site generator. Full testing coverage and published to <a href="https://www.npmjs.org/package/static-site-generator-">NPM</a>. Source code can be found <a href="https://github.com/songty/Static-site-generator">here</a>.</p>
       </div>
     </div>
