--- a/swaptacular.html
+++ b/swaptacular.html
@@ -59,6 +59,7 @@
       <div class="col-lg-6 col-lg-offset-3 centered">
         <h3>Swap-Tacular</h3>
         <hr>
+        <img src="assets/img/portfolio/swap.jpg" alt="swap-tacular">
         <div class="col-2">
           <div><p>The essence of this application is Craigslist meet Tinder. A cloud bazaar for users to trade, swap, share their things. Minimum viable product is hosted on <a href="http://swap-tacular.herokuapp.com/#">Heroku</a>.</p></div>
           <div>
