--- a/work.html
+++ b/work.html
@@ -57,29 +57,29 @@
   <div class="container pt">
     <div class="row mt centered"> 
       <div class="col-lg-4">
-        <a class="zoom blue" href="swaptacular.html"><img class="img-responsive" src="assets/img/portfolio/swap.jpg" alt="" /></a>
+        <a class="zoom blue" href="swaptacular.html"><img class="img-responsive" src="assets/img/portfolio/swap.jpg" alt="swap-tacular"></a>
         <p>Swap-tacular</p>
       </div>
       <div class="col-lg-4">
-        <a class="zoom blue" href="lunch.html"><img class="img-responsive" src="assets/img/portfolio/lunch.jpg" alt="" /></a>
+        <a class="zoom blue" href="lunch.html"><img class="img-responsive" src="assets/img/portfolio/lunch.jpg" alt="lunch"></a>
         <p>LunchOn!</p>
       </div>
       <div class="col-lg-4">
-        <a class="zoom blue" href="flickr.html"><img class="img-responsive" src="assets/img/portfolio/infinite.jpg" alt="" /></a>
+        <a class="zoom blue" href="flickr.html"><img class="img-responsive" src="assets/img/portfolio/infinite.jpg" alt="flickr"></a>
         <p>Infinite Interesting Scroll</p>
       </div>
     </div><!-- /row -->
     <div class="row mt centered"> 
       <div class="col-lg-4">
-        <a class="zoom blue" href="sudoku.html"><img class="img-responsive" src="assets/img/portfolio/sudoku.jpg" alt="" /></a>
+        <a class="zoom blue" href="sudoku.html"><img class="img-responsive" src="assets/img/portfolio/sudoku.jpg" alt="sudoku"></a>
         <p>Sudoku Solver</p>
       </div>
       <div class="col-lg-4">
-        <a class="zoom blue" href="static.html"><img class="img-responsive" src="assets/img/portfolio/static.jpg" alt="" /></a>
+        <a class="zoom blue" href="static.html"><img class="img-responsive" src="assets/img/portfolio/static.jpg" alt="static"></a>
         <p>Static Site Generator</p>
       </div>
       <div class="col-lg-4">
-        <a class="zoom blue" href="work01.html"><img class="img-responsive" src="assets/img/portfolio/website.png" alt="" /></a>
+        <a class="zoom blue" href="work01.html"><img class="img-responsive" src="assets/img/portfolio/website.png" alt="web"></a>
         <p>This Website</p>
       </div>
     </div><!-- /row -->
