--- a/sudoku.html
+++ b/sudoku.html
@@ -59,6 +59,7 @@
       <div class="col-lg-6 col-lg-offset-3 centered">
         <h3>Sudoku Solver</h3>
         <hr>
+        <img src="assets/img/portfolio/sudoku.jpg" alt="sudoku">
         <p>One of my first projects. You can see just how far I've come along juxtaposing this project with some of my more recent projects. Source code can be found <a href="https://github.com/songty/Sudoku-solver">here</a>.</p>
       </div>
     </div>
