changed content for site page.

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <p>Static Site Generator</p>
       </div>
       <div class="col-lg-4">
-        <a class="zoom blue" href="work01.html"><img class="img-responsive" src="assets/img/portfolio/website.png" alt="web"></a>
+        <a class="zoom blue" href="site.html"><img class="img-responsive" src="assets/img/portfolio/website.png" alt="web"></a>
         <p>This Website</p>
       </div>
     </div><!-- /row -->
