--- a/site.html
+++ b/site.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
     <link rel="shortcut icon" href="../../docs-assets/ico/favicon.png">
 
-    <title>Work1</title>
+    <title>Site</title>
 
     <!-- Bootstrap core CSS -->
     <link href="assets/css/bootstrap.css" rel="stylesheet">
@@ -57,10 +57,19 @@
 	<div class="container pt">
 		<div class="row mt">
 			<div class="col-lg-6 col-lg-offset-3 centered">
-				<h3>PROJECT NAME</h3>
+				<h3>My Site</h3>
 				<hr>
-				<p>Currently still under construction.</p>
-			</div>
+        <img src="assets/img/portfolio/website.png" alt="site">
+        <div class="col-2">
+          <div><p>Hosted on GitHub Pages. Source code can be found <a href="https://github.com/songty/my-site">here</a>.</p></div>
+          <div>
+            <h4>Features:</h3>
+            <ul>
+              <li><strong>Floating Navbar</strong></li>
+              <li><strong>Selection Overlay</strong></li>
+            </ul>
+          </div>
+        </div>			</div>
 		</div>
 		<div class="row mt centered">	
 			<div class="col-lg-8 col-lg-offset-2">
