--- a/swaptacular.html
+++ b/swaptacular.html
@@ -90,8 +90,8 @@
         <div class="col-lg-4">
           <h4>My Contacts</h4>
           <p>
-            Email: <a href="mailto:tian.y.song@gmail.com">Tian</a>,<br/>
-            Message: <a href="contact.html">Tian</a>, <br/>
+            Email: <a href="mailto:tian.y.song@gmail.com">Tian</a><br/>
+            Message: <a href="contact.html">Tian</a><br/>
             Portland, OR.
           </p>
         </div><!-- /col-lg-4 -->
