--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 			<div class="row">
 				<div class="col-lg-8 col-lg-offset-2 centered">
 					<img src="assets/img/user.png" alt="Tian">
-					<h1>Hello, this is Tian.</h1>
+					<h1>Hello, my name is Tian.</h1>
 					<p>Greetings. I'm an aspiring web app developer. This is my simple website to showcase my work.</p>
 				</div><!-- /col-lg-8 -->
 			</div><!-- /row -->
