more edits to about page.

--- a/about.html
+++ b/about.html
@@ -57,7 +57,8 @@
 					<img src="assets/img/user.png" alt="Stanley">
 					<h1>About Tian!</h1>
           <p>I am a full-stack web developer experienced with Node, Ember, and PostgreSQL. I use Git, love tests, and appreciate simple yet elegant designs.</p>
-					<p>My enduring purpose is to strive for happiness, knowledge, and good living. I will seek out the best and most exiting experiences this planet has to offer. This includes enjoying the pleasures while minimizing the pains. To balance the hedonistic framework with obligations to society, family and friends. To follow my core values without ever have to compromise. To go wherever my heart desires and fulfill my dreams. To succeed in both personal and professional life. Lastly, to die with no regrets knowing perfectly well that I have yet to only scratch the surface of everything this life has to offer.</p>
+          <p>Graduate of Vanderbilt University and <a href="http://www.portlandcodeschool.com/">Portland Code School</a>, I look forward to work in a fast-paced environment with the latest cutting-edge tools.</p>
+					<p>My enduring purpose is to strive for happiness, knowledge, and good living. I will seek out the best and most exiting experiences this planet has to offer. To balance the epicurean framework with obligations to society, family and friends. To follow my core values without ever have to compromise. To go wherever my heart desires and fulfill my dreams. To succeed in both personal and professional life. Lastly, to die with no regrets knowing perfectly well that I have yet to only scratch the surface of everything this life has to offer.</p>
 				</div><!-- /col-lg-8 -->
 			</div><!-- /row -->
 	    </div> <!-- /container -->
