--- a/site.html
+++ b/site.html
@@ -61,12 +61,13 @@
 				<hr>
         <img src="assets/img/portfolio/website.png" alt="site">
         <div class="col-2">
-          <div><p>Hosted on GitHub Pages. Source code can be found <a href="https://github.com/songty/my-site">here</a>.</p></div>
+          <div><p>Hosted on GitHub Pages. Outsourced form handing to Google. Source code can be found <a href="https://github.com/songty/my-site">here</a>.</p></div>
           <div>
             <h4>Features:</h3>
             <ul>
               <li><strong>Floating Navbar</strong></li>
               <li><strong>Selection Overlay</strong></li>
+              <li><strong>Responsiveness</strong></li>
             </ul>
           </div>
         </div>			</div>
@@ -103,7 +104,7 @@
 				
 				<div class="col-lg-4">
 					<h4>This Site</h4>
-					<p>This is a site built using bootstrap and template to make everything look nice and pretty.</p>
+					<p>This is a site built using bootstrap and a template to make everything look nice and pretty.</p>
 				</div><!-- /col-lg-4 -->
 			
 			</div>
