--- a/swaptacular.html
+++ b/swaptacular.html
@@ -61,7 +61,7 @@
         <hr>
         <img src="assets/img/portfolio/swap.jpg" alt="swap-tacular">
         <div class="col-2">
-          <div><p>The essence of this application is Craigslist meet Tinder. A cloud bazaar for users to trade, swap, share their things. Minimum viable product is hosted on <a href="http://swap-tacular.herokuapp.com/#">Heroku</a>.</p></div>
+          <div><p>The essence of this application is Craigslist meets Facebook. A cloud bazaar for users to trade, swap, share their things. Minimum viable product is hosted on <a href="http://swap-tacular.herokuapp.com/#">Heroku</a>.</p></div>
           <div>
             <h4>Features:</h3>
             <ul>
