small rewording to short blurbs.

--- a/contact.html
+++ b/contact.html
@@ -91,7 +91,7 @@
 				
 				<div class="col-lg-4">
 					<h4>This Form</h4>
-					<p>I am aware that developing consists of many trade-offs such as sometimes sacrificing UX for expediency.</p>
+					<p>I am aware that developing sometimes consists of many trade-offs. Everything has an opportunity cost.</p>
 				</div><!-- /col-lg-4 -->
 			
 			</div>
