--- a/about.html
+++ b/about.html
@@ -97,21 +97,21 @@
 			
 			<div class="col-lg-6">
 				<h4>THE SKILLS</h4>
-				JavaScript
+				JavaScript &amp jQuery
 				<div class="progress">
 					<div class="progress-bar progress-bar-theme" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 70%;">
 						<span class="sr-only">70% Complete</span>
 					</div>
 				</div>
 
-				CSS3
+				HTML5 &amp CSS3
 				<div class="progress">
 					<div class="progress-bar progress-bar-theme" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
 						<span class="sr-only">60% Complete</span>
 					</div>
 				</div>
 				
-				HTML5
+				Node.js &amp Express.js
 				<div class="progress">
 					<div class="progress-bar progress-bar-theme" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100" style="width: 85%;">
 						<span class="sr-only">85% Complete</span>
